--- a/jackal_robot/package.xml
+++ b/jackal_robot/package.xml
@@ -14,8 +14,8 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <run_depend version_gte="0.3">jackal_bringup</run_depend>
-  <run_depend>jackal_firmware</run_depend>
-  <run_depend>jackal_tests</run_depend>
+  <!-- <run_depend>jackal_firmware</run_depend>
+  <run_depend>jackal_tests</run_depend> -->
 
   <export>
     <metapackage />
